Add Generic error screen

--- a/Unsplash/Resources/en.lproj/Localizable.strings
+++ b/Unsplash/Resources/en.lproj/Localizable.strings
@@ -15,3 +15,6 @@
 "unsplash" = "Unsplash";
 "placeholder" = "Search free high-resolution photos";
 "notFound" = "No results found";
+"noConnection" = "No internet connection";
+"genericErrorTitle" = "Sorry, something wrong happened 😔";
+"genericErrorDescription" = "Try again later";
